[package]
name = "microservice"
version = "0.1.0"
authors = ["Jonas Sindlinger <jonas.sindlinger@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0"
diesel = { version = "1.4.4", features = ["sqlite"] }
dotenv = "0.15.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

uuid = { version = "0.7", features = ["serde", "v4"] } 
